--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -25,7 +25,8 @@
         <li><a href="{% url 'login' %}">Login</a></li>
 <!--        <li><a href="user_profile.html">Login</a></li>-->
         <li><a href="{% url 'signup' %}">SignUp</a></li>
-        <li><a href="">About US</a></li>
+{#        <li><a href="">About US</a></li>#}
+        <li><a href="{% url 'chatbot_page' %}">AskVVIT</a></li>
     </ul>
     <div class="burger">
         <div class="line1"></div>
