--- a/FRS_attendance/templates/face-1.html
+++ b/FRS_attendance/templates/face-1.html
@@ -42,10 +42,42 @@
         <!-- Slide bar -->
         <div class="bg-transparent col-sm-auto bg-light sticky-top">
             <div class="d-flex flex-sm-column flex-row flex-nowrap bg-light align-items-center sticky-top">
-                <ul class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center">
+                <ul class="  bg-transparent nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center">
                     <li class="nav-item">
-                        <a href="DashBoard1.html" class="nav-link py-3 px-2" title="DASHBOARD" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
+                        <a href="dashboard" class="nav-link py-3 px-2" title="DASHBOARD" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
                             <img src="{% static 'images/Dashboard_svg.svg' %}" alt="Dashboard" width="30" height="24">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'chatbot_page' %}" class="nav-link py-3 px-2" title="CHAT BOT" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="AddComplaint">
+                            <img src="{% static 'images/chat-bot.svg' %}" alt="chat bot" width="38" height="38">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'lostandfound' %}" class="nav-link py-3 px-2" title="PROPERTY_LOSS" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Dashboard">
+                            <img src="{% static 'images/Property.svg' %}" alt="Property" width="38" height="38">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'face_recognition_page' %}" class="nav-link py-3 px-2" title="FRS" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Dashboard">
+                            <img src="{% static 'images/FACE.svg' %}" alt="Property" width="38" height="38">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'complaint' %}" class="nav-link py-3 px-2" title="RegisterComplaint" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="MyComplaints">
+                           <img src="{% static 'images/checklist.svg' %}" alt="Registrations_complaints" width="38" height="38">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="{% url 'feedback' %}" class="nav-link py-3 px-2" title="Feedback" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="AddComplaint">
+                            <img src="{% static 'images/add-file.svg' %}" alt="feed_back" width="38" height="38">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="{% url 'logout' %}" class="nav-link py-3 px-2" title="LOGOUT" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="AddComplaint">
+                            <img src="{% static 'images/logout.svg' %}" alt="logout" width="38" height="38">
                         </a>
                     </li>
                 </ul>
@@ -63,14 +95,14 @@
                         <div id="message" class="alert alert-info mt-3 d-none"></div>
                     </div>
                 </main>
-                <aside class="col-md-4">
-                    <div class="card p-3">
-                        <h3>Student Details</h3>
-                        <p>Name: John Doe</p>
-                        <p>ID: 123456</p>
-                        <p>Class: 10A</p>
-                    </div>
-                </aside>
+{#                <aside class="col-md-4">#}
+{#                    <div class="card p-3">#}
+{#                        <h3>Student Details</h3>#}
+{#                        <p>Name: John Doe</p>#}
+{#                        <p>ID: 123456</p>#}
+{#                        <p>Class: 10A</p>#}
+{#                    </div>#}
+{#                </aside>#}
             </div>
         </div>
     </div>
@@ -82,6 +114,14 @@
         const captureButton = document.getElementById('capture-button');
         const markAttendanceButton = document.getElementById('mark-attendance-button');
         const messageDiv = document.getElementById('message');
+
+        // Coordinates of the college area (forming a box)
+        const collegeCoordinates = [
+            { lat: 16.345009976721016, lng: 80.5244310120301 },
+            { lat: 16.344743204932225, lng: 80.52520822955769 },
+            { lat: 16.34379294514378, lng: 80.52392028382043 },
+            { lat: 16.343506582000995, lng: 80.52474125169807 }
+        ];
 
         // Start the webcam on page load
         startWebcam();
@@ -130,13 +170,61 @@
 
         captureButton.addEventListener('click', () => {
             const imageData = captureImage();
-            registerFace(imageData);
+            checkUserLocationAndRegisterFace(imageData);
         });
 
         markAttendanceButton.addEventListener('click', () => {
             const imageData = captureImage();
-            markAttendance(imageData);
+            checkUserLocationAndMarkAttendance(imageData);
         });
+
+        // Check if the user is within the defined coordinates and proceed
+        function checkUserLocationAndRegisterFace(imageData) {
+            navigator.geolocation.getCurrentPosition(position => {
+                const userLocation = { lat: position.coords.latitude, lng: position.coords.longitude };
+                if (isUserInCollege(userLocation)) {
+                    registerFace(imageData);
+                } else {
+                    displayMessage('You should be in your college premises.');
+                }
+            }, error => {
+                console.error('Error getting location:', error);
+                displayMessage('Could not retrieve your location. Please enable GPS.');
+            });
+        }
+
+        function checkUserLocationAndMarkAttendance(imageData) {
+            navigator.geolocation.getCurrentPosition(position => {
+                const userLocation = { lat: position.coords.latitude, lng: position.coords.longitude };
+                if (isUserInCollege(userLocation)) {
+                    markAttendance(imageData);
+                } else {
+                    displayMessage('You should be in your college premises.');
+                }
+            }, error => {
+                console.error('Error getting location:', error);
+                displayMessage('Could not retrieve your location. Please enable GPS.');
+            });
+        }
+
+        // Function to check if user's location is within the college area
+        function isUserInCollege(userLocation) {
+            // Simple check for a box (latitude and longitude ranges)
+            const latitudes = collegeCoordinates.map(coord => coord.lat);
+            const longitudes = collegeCoordinates.map(coord => coord.lng);
+
+            const maxLat = Math.max(...latitudes);
+            const minLat = Math.min(...latitudes);
+            const maxLng = Math.max(...longitudes);
+            const minLng = Math.min(...longitudes);
+
+            return (
+                userLocation.lat >= minLat &&
+                userLocation.lat <= maxLat &&
+                userLocation.lng >= minLng &&
+                userLocation.lng <= maxLng
+            );
+        }
 
         function registerFace(imageData) {
             fetch('/register_face/', {
@@ -200,7 +288,7 @@
             return cookieValue;
         }
     });
-</script>
 
+</script>
 </body>
 </html>
