--- a/dashboard/templates/feedback.html
+++ b/dashboard/templates/feedback.html
@@ -38,6 +38,55 @@
 </nav>
 <!---nav bar end-->
 
+<div class="container-fluid">
+    <div class="row">
+        <!-- Slide bar -->
+        <div class="bg-transparent col-sm-auto bg-light sticky-top">
+            <div class="d-flex flex-sm-column flex-row flex-nowrap bg-light align-items-center sticky-top">
+                <ul class="  bg-transparent nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center">
+                    <li class="nav-item">
+                        <a href="dashboard" class="nav-link py-3 px-2" title="DASHBOARD" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Home">
+                            <img src="{% static 'images/Dashboard_svg.svg' %}" alt="Dashboard" width="30" height="24">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'chatbot_page' %}" class="nav-link py-3 px-2" title="CHAT BOT" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="AddComplaint">
+                            <img src="{% static 'images/chat-bot.svg' %}" alt="chat bot" width="38" height="38">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'lostandfound' %}" class="nav-link py-3 px-2" title="PROPERTY_LOSS" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Dashboard">
+                            <img src="{% static 'images/Property.svg' %}" alt="Property" width="38" height="38">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'face_recognition_page' %}" class="nav-link py-3 px-2" title="FRS" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Dashboard">
+                            <img src="{% static 'images/FACE.svg' %}" alt="Property" width="38" height="38">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{% url 'complaint' %}" class="nav-link py-3 px-2" title="RegisterComplaint" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="MyComplaints">
+                           <img src="{% static 'images/checklist.svg' %}" alt="Registrations_complaints" width="38" height="38">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="{% url 'feedback' %}" class="nav-link py-3 px-2" title="Feedback" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="AddComplaint">
+                            <img src="{% static 'images/add-file.svg' %}" alt="feed_back" width="38" height="38">
+                        </a>
+                    </li>
+
+                    <li>
+                        <a href="{% url 'logout' %}" class="nav-link py-3 px-2" title="LOGOUT" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="AddComplaint">
+                            <img src="{% static 'images/logout.svg' %}" alt="logout" width="38" height="38">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <!-- End of slide bar -->
+
+
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-6">
