--- a/dashboard/templates/feedback.html
+++ b/dashboard/templates/feedback.html
@@ -65,7 +65,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{% url 'complaint' %}" class="nav-link py-3 px-2" title="RegisterComplaint" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="MyComplaints">
+                        <a href="#" class="nav-link py-3 px-2" title="RegisterComplaint" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="MyComplaints">
                            <img src="{% static 'images/checklist.svg' %}" alt="Registrations_complaints" width="38" height="38">
                         </a>
                     </li>
